# twitter-microservice

./: CMakeLists.txt  README.md  twitter.thrift
cmake/: Findlibmemcached.cmake  HunterGate.cmake
cmake/Hunter/: config.cmake
config/: service_config.json  service_config.yaml
docker/docker-openresty/lua-thrift/: TBinaryProtocol.lua  TBufferedTransport.lua  TSocket.lua
docker/docker-openresty/xenial/: Dockerfile
gen-cpp/: ComposeService.cpp  ComposeService.h  ComposeService_server.skeleton.cpp  FileService.cpp  FileService.h  FileService_server.skeleton.cpp  TweetService.cpp  TweetService.h  TweetService_server.skeleton.cpp  UserService.cpp  UserService.h  UserService_server.skeleton.cpp  twitter_constants.cpp  twitter_constants.h  twitter_types.cpp  twitter_types.h
gen-lua/: twitter_ComposeService.lua  twitter_FileService.lua  twitter_TweetService.lua  twitter_UserService.lua  twitter_ttypes.lua
gen-py/twitter/: ComposeService-remote  ComposeService.py  FileService-remote  FileService.py  TweetService-remote  TweetService.py  UserService-remote  UserService.py  __init__.py  ttypes.py
include/: ClientPool.h  MemcachedClient.h  MemcachedClientPool.h  MongodbClient.h  ThriftClient.h  ThriftClientPool.h  Utils.h
nginx-lua/conf/: nginx.conf
nginx-lua/html/: content.lua
scripts/: clean_up.sh  load_db.py  load_user_db.py  run_exp.sh  setup.sh
src/: Client.cc  ComposeService.cc  ComposeService.h  FileService.cc  FileService.h  TweetService.cc  TweetService.h  UserService.cc  UserService.h
test/: test_compose_service.py  test_file_service.py  test_tweet_service.py  test_user_service.py
wrk2/scripts/: multiple-url-paths.lua  twitter.lua
wrk2/src/: hdr_histogram.c  script.c  script.h  units.c  units.h  wrk.c  wrk.h
